--- a/assignment4_s1010747_s4549775.md
+++ b/assignment4_s1010747_s4549775.md
@@ -8,6 +8,9 @@ fontsize: 12pt
 geometry: margin=5em
 ---
 
+\newcommand{\y}{\checkmark}
+\newcommand{\n}{$\times$}
+
 # 1
 ## a
 ## b
@@ -15,4 +18,19 @@ geometry: margin=5em
 
 # 2
 ## a
+We assume that both the Bell-LaPadula, and the Biba rules use weak tranquility.
+
+|action|access allowed|Bell-LaPadula level|Biba level|
+|-----:|:------------:|:-----------------:|:--------:|
+i|\y|unclassified|trusted
+ii|\y|unclassified|system
+iii|\n|unclassified|system
+iv|\y|unclassified|system
+v|\y|confidential|system
+vi|\n|condifential|system
+
+Peter's process must not drop below level "application", but Biba disallows read-down, so the process is denied access to `/home/peter/database`, because it requires application "user" or lower to be read. The action iii is disallowed.
+
+Action v is disallowed, because Biba disallows write-up, and the process has level "system", but it would need "trusted" to be allowed to write `/etc/shadow`. Bell-LaPadula allows write-up, so that is not a problem.
+
 ## b
