--- a/assignment4_s1010747_s4549775.md
+++ b/assignment4_s1010747_s4549775.md
@@ -31,6 +31,6 @@ vi|\n|condifential|system
 
 Peter's process must not drop below level "application", but Biba disallows read-down, so the process is denied access to `/home/peter/database`, because it requires application "user" or lower to be read. The action iii is disallowed.
 
-Action v is disallowed, because Biba disallows write-up, and the process has level "system", but it would need "trusted" to be allowed to write `/etc/shadow`. Bell-LaPadula allows write-up, so that is not a problem.
+Action vi is disallowed, because Biba disallows write-up, and the process has level "system", but it would need "trusted" to be allowed to write `/etc/shadow`. Bell-LaPadula allows write-up, so that is not a problem.
 
 ## b
