--- a/assignment4_s1010747_s4549775.md
+++ b/assignment4_s1010747_s4549775.md
@@ -27,7 +27,7 @@ ii|\y|unclassified|system
 iii|\n|unclassified|system
 iv|\y|unclassified|system
 v|\y|confidential|system
-vi|\n|condifential|system
+vi|\n|confidential|system
 
 Peter's process must not drop below level "application", but Biba disallows read-down, so the process is denied access to `/home/peter/database`, because it requires application "user" or lower to be read. The action iii is disallowed.
 
