--- a/assignment4_s1010747_s4549775.md
+++ b/assignment4_s1010747_s4549775.md
@@ -34,3 +34,6 @@ Peter's process must not drop below level "application", but Biba disallows read
 Action vi is disallowed, because Biba disallows write-up, and the process has level "system", but it would need "trusted" to be allowed to write `/etc/shadow`. Bell-LaPadula allows write-up, so that is not a problem.
 
 ## b
+After executing the 6 actions from 2a, the process has level ("confidential", "system"). Bell-LaPadula disallows write-down, so the file may have levels "confidential", "secret", or "top secret", but **not** "unclassified". Biba disallows write-up, so the file may have levels "system", "application", "user", or "untrusted", but **not** "trusted".
+
+`/home/peter/out` may have any level in {"confidential", "secret", "top secret"} $\times$ {"system", "application", "user", "untrusted"}, like, for example, ("confidential", "user") or ("secret", "system").
