List the system calls used by `showdate`.

--- a/assignment4_s1010747_s4549775.md
+++ b/assignment4_s1010747_s4549775.md
@@ -13,6 +13,30 @@ geometry: margin=5em
 
 # 1
 ## a
+We can see which system calls `showdate` uses with the `strace` command, here is a complete list:
+
+```
+$ strace ./showdate 2>&1 | grep -oP "^\w+(?=\()" | sort -u
+access
+arch_prctl
+brk
+clone
+close
+execve
+exit_group
+fstat
+mmap
+mprotect
+munmap
+openat
+read
+rt_sigaction
+rt_sigprocmask
+setgid
+setuid
+wait4
+```
+
 ## b
 ## c
 
