Include child processes.

--- a/assignment4_s1010747_s4549775.md
+++ b/assignment4_s1010747_s4549775.md
@@ -16,7 +16,7 @@ geometry: margin=5em
 We can see which system calls `showdate` uses with the `strace` command, here is a complete list:
 
 ```
-$ strace ./showdate 2>&1 | grep -oP "^\w+(?=\()" | sort -u
+$ strace -f ./showdate 2>&1 | grep -oP "\w+(?=\()" | sort -u
 access
 arch_prctl
 brk
@@ -26,16 +26,31 @@ execve
 exit_group
 fcntl
 fstat
+getegid
+geteuid
+getgid
+getpgrp
+getpid
+getppid
+getuid
+ioctl
+lseek
 mmap
 mprotect
 munmap
+open
 openat
+prlimit64
 read
 rt_sigaction
 rt_sigprocmask
 setgid
 setuid
+stat
+sysinfo
+uname
 wait4
+write
 ```
 
 ## b
