--- a/assignment4_s1010747_s4549775.md
+++ b/assignment4_s1010747_s4549775.md
@@ -55,6 +55,7 @@ write
 
 ## b
 ## c
+During the development of software intended to be run with `setuid-root`, special attention must be payed to not rely on any aspect of the environment controllable by non-root users. This includes environment variables. The attack was possible because the path to `date` was not hardcoded, but it was taken from the environment. We could not alter anything in `/usr/bin`, or `showdate` itself, but we could make the lookup for the `date` executable find what we wanted by altering the `PATH` environment variable, which does not require special privileges.
 
 # 2
 ## a
