--- a/assignment4_s1010747_s4549775.md
+++ b/assignment4_s1010747_s4549775.md
@@ -13,6 +13,8 @@ geometry: margin=5em
 
 # 1
 ## a
+The `showdate` program sets the group and user id to root using `setuid(0)` and `setgid(0)`, then it runs `system("date")`. As the program runs `date` with root privileges, we can start a root shell by substituting `date`.
+
 We can see which system calls `showdate` uses with the `strace` command, here is a complete list:
 
 ```
