--- a/assignment4_s1010747_s4549775.md
+++ b/assignment4_s1010747_s4549775.md
@@ -75,7 +75,7 @@ During the development of software intended to be run with `setuid-root`, specia
 
 # 2
 ## a
-We assume that both the Bell-LaPadula, and the Biba rules use weak tranquility.
+We assume that both the Bell-LaPadula, and the Biba rules use weak tranquility. The Bell-LaPadula and Biba levels in the table correspond to the `/usr/bin/someprog` process, *after* the action has been executed.
 
 |action|access allowed|Bell-LaPadula level|Biba level|
 |-----:|:------------:|:-----------------:|:--------:|
